--- a/Project.toml
+++ b/Project.toml
@@ -4,4 +4,5 @@ authors = ["Luciano Lorenti <luciano.lorenti@jampp.com>"]
 version = "0.1.0"
 
 [deps]
+Graphics = "a2bd30eb-e257-5431-a919-1863eab51364"
 Gtk = "4c0ca9eb-093a-5379-98c5-f87ac0bbbf44"
